--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,14 +16,16 @@
         <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
         <img src="{{site.logo | relative_url}}" alt="Logo" />
         <p>{{ site.description | default: site.github.project_tagline }}</p>
-        <p class="view"><a href="http://stackoverflow.com/cv/florianpeschka">Resume</a></p>
-        <p class="view"><a href="{{ site.github.owner_url }}">GitHub</a></p>
+        <p class="view">
+          <a href="http://stackoverflow.com/cv/florianpeschka">Resume</a>
+          <a href="{{ site.github.owner_url }}">GitHub</a>
+        </p>
       </header>
       <section>
       {{ content }}
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>, modified</small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a> &mdash; modified by <a href="{{ site.github.owner_url }}">flopes89</a></small></p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
