--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-{% seo %}
+    {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -17,27 +17,21 @@
         <img src="{{site.logo | relative_url}}" alt="Logo" />
         <p>{{ site.description | default: site.github.project_tagline }}</p>
         <p class="view">
-          <a href="http://stackoverflow.com/cv/florianpeschka">Resume</a>
-          <a href="{{ site.github.owner_url }}">GitHub</a>
+          <a href="https://stackoverflow.com/cv/florianpeschka">Resume</a><br/>
+          <a href="/papers">Papers</a><br/>
+          <a href="{{ site.github.owner_url }}">GitHub</a><br/>
         </p>
       </header>
       <section>
       {{ content }}
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a> &mdash; modified by <a href="{{ site.github.owner_url }}">flopes89</a></small></p>
+        <p>
+		  <small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a> &mdash;
+		  modified by <a href="{{ site.github.owner_url }}">flopes89</a></small>
+		</p>
       </footer>
     </div>
     <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-    {% if site.google_analytics %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ site.google_analytics }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %}
   </body>
 </html>
